objects/AcctSeed__Project__c.object
<CustomObject>
    <fields>
        <fullName>Date_First_Expected__c</fullName>
        <label>Date First Expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Interconx_Submitted_to_Utility__c</fullName>
        <description>used with rolluphelper to pull date interconnection submitted to utility from the most recent interconnection app to the project. Used for reporting purposes.</description>
        <label>Date Interconx Submitted to Utility</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Project_On_WIP_Status__c</fullName>
        <description>Auto filled out when Project WIP status moves to &quot;On WIP&quot; via a WF</description>
        <inlineHelpText>Auto filled out when Project WIP status moves to &quot;On WIP&quot;. Used in Reports.</inlineHelpText>
        <label>Date Project On WIP Status</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Projection_Locked__c</fullName>
        <inlineHelpText>Filled in via workflow field update</inlineHelpText>
        <label>Date Projection Locked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SPG_DAS_Status_100__c</fullName>
        <description>Used by SPG group to QA DAS platform on new projects.</description>
        <inlineHelpText>Captures the date when the status of the SPG DAS QA field changes to 100% Complete</inlineHelpText>
        <label>Date SPG DAS Status 100%</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sales_Budget_Locked__c</fullName>
        <description>Updated via WF to record when the SF budget date is locked. Used in reporting</description>
        <label>Date Sales Budget Locked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Inspection_Checklist__c</fullName>
        <label>Date of Last Inspection Checklist</label>
        <summarizedField>Inspection_Checklist__c.CreatedDate</summarizedField>
        <summaryForeignKey>Inspection_Checklist__c.Project__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Days_Bwtn_Updtd_Wtlnd_Layt_Forec_and_Act__c</fullName>
        <formula>Updated_Wetland_Layout_Actual__c -  Updated_Wetland_Layout_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Bwtn Updtd Wtlnd Layt Forec and Act</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_1st_L1__c</fullName>
        <description>Calculates # of days between created date of 1st pre-sales design revision and PTO. For Reporting.</description>
        <formula>IF( Job_Number__c =&apos;905-0367&apos;, 516,
IF( Job_Number__c =&apos;905-0542&apos;, 387,
IF( Job_Number__c =&apos;908-0075&apos;, 1119,
IF( Job_Number__c =&apos;908-0072&apos;, 1119,
IF( Job_Number__c =&apos;908-0076&apos;, 1200,
IF( Job_Number__c =&apos;908-0073&apos;, 1203,
 Site_PTO_Date__c  -  AcctSeed__Opportunity__r.L1_Date__c ))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates # of days between created date of 1st pre-sales design revision and PTO. For Reporting.</inlineHelpText>
        <label>Total Days L1 to PTO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Kickoff__c</fullName>
        <formula>Today () -  Project_Kickoff_Date__c</formula>
        <inlineHelpText>calculates # of days since Kickoff Date.</inlineHelpText>
        <label>Days Since Kickoff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_between_HandOff_and_CDComplete__c</fullName>
        <formula>Const_Set_Completed__c -  Hand_off_Date__c</formula>
        <inlineHelpText>Calculates # of days between Hand Off Date and Const Set Completed.</inlineHelpText>
        <label>Days between HandOff and CDComplete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_between_Handoff_and_Mobilization__c</fullName>
        <formula>SFDC_Project_Start_Date__c -  Hand_off_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days between Handoff and Mobilization</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_between_Kickoff_and_CDSet__c</fullName>
        <formula>Const_Set_Completed__c -  Project_Kickoff_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days between Kickoff and CDSet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_between_Kickoff_and_Handoff__c</fullName>
        <formula>Hand_off_Date__c - Project_Kickoff_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days between Kickoff and Handoff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_between_Kickoff_and_Mob__c</fullName>
        <formula>SFDC_Project_Start_Date__c - Project_Kickoff_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days between Kickoff and Mob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_between_L1_and_Handoff__c</fullName>
        <formula>Hand_off_Date__c -  AcctSeed__Opportunity__r.L1_Date__c</formula>
        <inlineHelpText>Calculates the # of days between Handoff and the created date of 1st psd revision</inlineHelpText>
        <label>Days between L1 and Handoff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_between_L1_and_Kickoff__c</fullName>
        <formula>Project_Kickoff_Date__c  - AcctSeed__Opportunity__r.L1_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the # of days between Project Kickoff Date and the created date of 1st psd revision</inlineHelpText>
        <label>Days between L1 and Kickoff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_between_Mobilization_and_PTO__c</fullName>
        <formula>Site_PTO_Date__c -  SFDC_Project_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days between Mobilization and PTO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_between_Mobilization_and_Sub_Compl__c</fullName>
        <formula>SFDC_Project_End_Date__c - SFDC_Project_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days between Mobilization and Sub Compl</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_between_Substantial_and_PTO__c</fullName>
        <formula>Site_PTO_Date__c  -  SFDC_Project_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days between Mechanical and PTO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_btwn_LIDAR_GIS_Forcast_and_Actual__c</fullName>
        <formula>LIDAR_GIS_Actual__c -  LIDAR_GIS_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days btwn LIDAR GIS Forcast and Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_btwn_Slope_Alysis_Chk_Fore_and_Actu__c</fullName>
        <formula>Slope_Analysis_Check_Actual__c -  Slope_Analysis_Check_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days btwn Slope Alysis Chk Fore and Actu</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_btwn_Wetlnd_Del_Forecast_and_Actual__c</fullName>
        <formula>Wetlands_Delineated_Actual__c -  Wetlands_Delineated_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days btwn Wetlnd Del Forecast and Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_btwn_Wetlnd_Survey_Forec_and_Actual__c</fullName>
        <formula>Wetlands_Surveyed_Actual__c -  Wetlands_Surveyed_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days btwn Wetlnd Survey Forec and Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deadline_Date__c</fullName>
        <inlineHelpText>Are there any deadlines in the contract? Specify any deadline dates here</inlineHelpText>
        <label>Deadline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deadline_Dates__c</fullName>
        <inlineHelpText>Deadline dates from the Site</inlineHelpText>
        <label>Deadline Dates</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deadline_Description__c</fullName>
        <inlineHelpText>Description of the deadline date. Required when there is a deadline date filled in</inlineHelpText>
        <label>Deadline Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dec_Estimated_Performance__c</fullName>
        <description>Needed for customer portal in Diaspark for Borrego O&amp;M</description>
        <inlineHelpText>Needed for customer portal in Diaspark for Borrego O&amp;M</inlineHelpText>
        <label>Dec Estimated Performance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dec_Irradiance_Data__c</fullName>
        <description>Needed for customer portal in Diaspark for Borrego O&amp;M</description>
        <inlineHelpText>Needed for customer portal in Diaspark for Borrego O&amp;M</inlineHelpText>
        <label>Dec Irradiance Data</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Branch</label>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Expense_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used by Accounting- Default GL Account for transactions</inlineHelpText>
        <label>Default Expense GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Projects (Default Expense GL Account)</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Revenue_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used by Accounting- Default Revenue GL Account for transactions</inlineHelpText>
        <label>Default Revenue GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Notes__c</fullName>
        <inlineHelpText>Notes regarding the delivery of equipment</inlineHelpText>
        <label>Delivery Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_Notes__c</fullName>
        <inlineHelpText>Historical record of all Design Notes, autopopulated by what is entered in New Design Note field.
Notes on the Status of the Design- filled out by SDEs</inlineHelpText>
        <label>Design Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_Personal_Change__c</fullName>
        <inlineHelpText>Use this field to track what engineer that was responsible for each set.</inlineHelpText>
        <label>Design Personal Change</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Design_Stage__c</fullName>
        <inlineHelpText>Current set the Engineering team is working on. Defaults to New upon creation of a Project.</inlineHelpText>
        <label>Design Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>30% Set</fullName>
                </value>
                <value>
                    <fullName>50% Design</fullName>
                </value>
                <value>
                    <fullName>Permit Set</fullName>
                </value>
                <value>
                    <fullName>Construction Set</fullName>
                </value>
                <value>
                    <fullName>As Built</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Design_Subcontractor__c</fullName>
        <label>Design Subcontractor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nalu</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>none</fullName>
                    <default>true</default>
                    <label>none</label>
                </value>
                <value>
                    <fullName>LJT- East Coast</fullName>
                </value>
                <value>
                    <fullName>LJT- West Coast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Design_Time_Design_Start_to_50__c</fullName>
        <formula>( X50_Set_Completed__c - Internal_NTP_Date__c )/7*5</formula>
        <label>Design Time- Design Start to 50%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Time_Handoff_to_Design_Start__c</fullName>
        <formula>(Internal_NTP_Date__c - Hand_off_Date__c)/7*5</formula>
        <label>Design Time- Handoff to Design Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Time_Permit_to_Const_Set__c</fullName>
        <formula>(Const_Set_Completed__c - Permit_Set_Completed__c)/7 *5</formula>
        <label>Design Time- Permit to Const Set</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Time_Start_to_Permit__c</fullName>
        <formula>(Permit_Set_Completed__c - Internal_NTP_Date__c )/7*5</formula>
        <label>Design Time- Start to Permit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Time_Total__c</fullName>
        <description>Time between Design Start Time and Construction Set Complete</description>
        <formula>(Const_Set_Completed__c -Internal_NTP_Date__c)/7*5</formula>
        <label>Design Time-Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DevCOGs__c</fullName>
        <inlineHelpText>rolls up actual costs for all line items with cost code marked as Dev Cogs</inlineHelpText>
        <label>Actual Dev COGs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Development_DE1_Drafter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Development DE1/Drafter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProjectsTiSS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Development_SDE_Email__c</fullName>
        <label>Development SDE Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Direct_Cost_Adj_Inventory__c</fullName>
        <description>Sum of Inbound Inventory Movement - Sum of Outbound Inventory Movement</description>
        <formula>Roll_Up_Inbound_Inventory_Movement_Total__c -  Roll_Up_Outbound_Inventory_Movement_Ttl__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of Inbound Inventory Movement - Sum of Outbound Inventory Movement</inlineHelpText>
        <label>Direct Cost Adj Inventory</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Margin_Dollars__c</fullName>
        <formula>Final_Contract_PriceProject__c -( AcctSeed__Budgeted_Amount__c - Cat_OH_Budgeted2__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Current Contract Price- Direct COGS (Budgeted Expense-CatOH Budgeted)</inlineHelpText>
        <label>Direct Margin $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Margin__c</fullName>
        <formula>(Final_Contract_PriceProject__c - ( AcctSeed__Budgeted_Amount__c-  Cat_OH_Budgeted2__c ))/Final_Contract_PriceProject__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Direct Margin on the Project
Contract Price-COGS/Contract Price</inlineHelpText>
        <label>Direct Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Direct_Margin_from_PT__c</fullName>
        <formula>AcctSeed__Opportunity__r.Direct_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Margin from PT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DollarsPaid2__c</fullName>
        <formula>Paid_3600__c - RollupCashReceipts__c + Amt_Unpaid_0_Invoice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dollars Paid2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Rebate section - due date.</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration_Time__c</fullName>
        <formula>IF(ISBLANK(Const_Set_Completed__c),
(CD_Forecast_Release_Date__c - Hand_off_Date__c )/7,
(Const_Set_Completed__c - Hand_off_Date__c )/7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculates # of weeks (7 days) between Hand off Date and CD Set Release Date, when blank Forecasted Date is used.</inlineHelpText>
        <label>Duration Time</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Project Developer</inlineHelpText>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EPC_Payment_Received__c</fullName>
        <description>Roll up SUM performed by BillingLineRollUp.trigger. Sum of field Billing Amount Received on associated Billing Line records.</description>
        <label>EPC Payment Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EPC_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>used by O&amp;M to track which EPC Site is tied to their O&amp;M projects</description>
        <inlineHelpText>select the EPC Site that is related to this EPC project</inlineHelpText>
        <label>EPC Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Projects OM</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESD_Actual_Costs__c</fullName>
        <description>roll up actual costs from ESD line items- with &quot;- ESD&quot;</description>
        <inlineHelpText>roll up actual costs from ESD line items- with &quot;- ESD&quot;</inlineHelpText>
        <label>Storage Actual Costs</label>
        <summarizedField>AcctSeed__Project_Task__c.All_Costs__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeed__Project_Task__c.Name</field>
            <operation>contains</operation>
            <value>ESD</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Project_Task__c.AcctSeed__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ESD_Budgeted_Expense__c</fullName>
        <description>Rollup Budget lines &quot;budgeted expense&quot; field with &quot; - ESD&quot; in the line item name or is equal to  Energy Storage Unit - Material</description>
        <inlineHelpText>Rollup Budget lines &quot;budgeted expense&quot; field with &quot; - ESD&quot; in the line item name or is equal to  Energy Storage Unit - Material</inlineHelpText>
        <label>Storage Budgeted Expense</label>
        <summarizedField>AcctSeed__Project_Task__c.AcctSeed__Budgeted_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeed__Project_Task__c.Name</field>
            <operation>contains</operation>
            <value>ESD,  Energy Storage Unit - Material</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Project_Task__c.AcctSeed__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ESD_Budgeted_Revenue__c</fullName>
        <description>rollup billing lines with ESD tag</description>
        <inlineHelpText>rollup billing lines with ESD line item name</inlineHelpText>
        <label>Storage Budgeted Revenue</label>
        <summarizedField>AcctSeed__Project_Task__c.AcctSeed__Budgeted_Revenue__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeed__Project_Task__c.ESD__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Project_Task__c.AcctSeed__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ESD_Change_Order_Total__c</fullName>
        <inlineHelpText>Roll up the &quot;ESD Change Order Total&quot; on related Change Orders</inlineHelpText>
        <label>Storage Change Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ESD_Contract_Value1__c</fullName>
        <formula>AcctSeed__Opportunity__r.ESDContractValue__c</formula>
        <inlineHelpText>Pulled from the related Opportunity</inlineHelpText>
        <label>Storage Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESD_Margin__c</fullName>
        <description>formula looking at Storage contract value and Revenue/Budget (1-( Storage Budgeted Expense/ Storage Contract Value)</description>
        <formula>1 - ( ESD_Budgeted_Expense__c /  ESD_Contract_Value1__c   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula looking at Storage contract value and Revenue/Budget (1-( Storage Budgeted Expense/ Storage Contract Value)</inlineHelpText>
        <label>Storage Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESD_Roll_Up__c</fullName>
        <description>Roll up of Budgeted Expense on the ESD Line Item</description>
        <label>Storage Roll Up</label>
        <summarizedField>AcctSeed__Project_Task__c.AcctSeed__Budgeted_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeed__Project_Task__c.Name</field>
            <operation>equals</operation>
            <value>Energy Storage Unit - Material</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Project_Task__c.AcctSeed__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ESD_System_Size__c</fullName>
        <description>system size for energy storage portion of the project</description>
        <inlineHelpText>system size for energy storage portion of the project</inlineHelpText>
        <label>Storage System Size kW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESD_System_Size_kWh__c</fullName>
        <inlineHelpText>Kilowatt hours of the energy storage portion of the Project.</inlineHelpText>
        <label>Storage System Size kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_Watt_Hours__c</fullName>
        <description>energy storage watt hours used on O&amp;M Projects</description>
        <inlineHelpText>energy storage watt hours</inlineHelpText>
        <label>ES Watt-Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_Watts_AC__c</fullName>
        <description>energy storage watts used on O&amp;M project</description>
        <inlineHelpText>energy storage watts</inlineHelpText>
        <label>ES Watts-AC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electrical_Engineer__c</fullName>
        <inlineHelpText>Internal or External Electrical Engineer associated with the project</inlineHelpText>
        <label>Electrical Engineer</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Storage_AP__c</fullName>
        <description>Rollup of WIP Costs for Energy Storage Unit - Material line items</description>
        <label>Energy Storage AP</label>
        <summarizedField>AcctSeed__Project_Task__c.Total_Actual_Costs__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeed__Project_Task__c.Name</field>
            <operation>equals</operation>
            <value>Energy Storage Unit - Material</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Project_Task__c.AcctSeed__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Entitlement_Approval_Actual__c</fullName>
        <label>Entitlement Approval Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entitlement_Approval_Forecast_TEXT__c</fullName>
        <formula>&quot;Entitlement Approval Forecast&quot;&amp; &quot;-&quot; &amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entitlement Approval Forecast- TEXT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excluded_in_Job_Cost_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used to include Projects in various reports where they wouldn&apos;t normally show up.</inlineHelpText>
        <label>Manual Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Amount_Federal__c</fullName>
        <description>Expected amount of federal rebate.</description>
        <inlineHelpText>Expected amount of federal rebate.</inlineHelpText>
        <label>Expected Amount (Federal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Rebate__c</fullName>
        <description>Automatically populated from the associated Opportunity record Expected Rebate field.</description>
        <formula>AcctSeed__Opportunity__r.Expected_Rebate__c</formula>
        <inlineHelpText>Automatically populated from the associated Opportunity record Expected Rebate field.</inlineHelpText>
        <label>Expected Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Active_Match__c</fullName>
        <formula>IF(
OR(
AND( TEXT( WIP_Status__c) = &quot;On WIP&quot;, PM_Lock__c = FALSE, Roll_Up_Budget_Line_Items__c = PM_Budget__c ),
AND( TEXT( WIP_Status__c) = &quot;On WIP&quot;, PM_Lock__c = TRUE, Roll_Up_Budget_Line_Items__c = Active_Budget__c )),
&quot;Match&quot;,&quot;Don&apos;t Match&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense Active Match</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Data_Room_Link__c</fullName>
        <description>Box folder link to External Data Room- populated by Project Finance</description>
        <inlineHelpText>Box folder link to External Data Room- populated by Project Finance</inlineHelpText>
        <label>External Data Room Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Extra_Payment_Amount__c</fullName>
        <label>Extra Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extra_Payment_Date__c</fullName>
        <label>Extra Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feb_Estimated_Performance__c</fullName>
        <description>Needed for customer portal in Diaspark for Borrego O&amp;M</description>
        <inlineHelpText>Needed for customer portal in Diaspark for Borrego O&amp;M</inlineHelpText>
        <label>Feb Estimated Performance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feb_Irradiance_Data__c</fullName>
        <description>Needed for customer portal in Diaspark for Borrego O&amp;M</description>
        <inlineHelpText>Needed for customer portal in Diaspark for Borrego O&amp;M</inlineHelpText>
        <label>Feb Irradiance Data</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fed_Rebate_Status__c</fullName>
        <label>Fed Rebate Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Project Incomplete</fullName>
                    <default>true</default>
                    <label>Project Incomplete</label>
                </value>
                <value>
                    <fullName>Gathering Paperwork</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Customer Received</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Amount_Federal__c</fullName>
        <description>Final amount of federal rebate.</description>
        <inlineHelpText>Final amount of federal rebate.</inlineHelpText>
        <label>Final Amount (Federal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Contract_PriceProject__c</fullName>
        <formula>Project_Contract_Value__c + Project_Change_Order_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Original Contract Price + Approved Change Orders +ESD Contract Value</inlineHelpText>
        <label>Current Contract Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_KW__c</fullName>
        <description>Rebate section - final KW.</description>
        <label>Final KW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Net_Cash_Position__c</fullName>
        <description>Current Cash Position minus Over/Short for Remainder of the Job</description>
        <formula>Current_Cash_Position__c + Over_Short_for_Remainder_Job__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Current Cash Position + Over/Short for Remainder of the Job</inlineHelpText>
        <label>Final Net Cash Position</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Rebate_Amount__c</fullName>
        <label>Final Rebate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>